--- a/frontend/src/routes/Root.module.css
+++ b/frontend/src/routes/Root.module.css
@@ -7,6 +7,8 @@
     display: flex;
     flex-direction: column;
     margin-top: 1rem;
+    min-width: 320px;
+    max-width: 480px;
 }
 
 .aside {
